# goldenconst

./: .gitignore  README.md  pyproject.toml
examples/: explore.py
goldenconst/: __init__.py  core.py
tests/: test_goldenconst.py
